2006-11-01  Jean-Christophe Baillie  <baillie@gostai.com>

	formating changes 

	* src/ucommand.cc: indent.
	* src/parser/bison/ugrammar.y: remove comments.

2006-11-01  Jean-Christophe Baillie  <baillie@gostai.com>

	Remove obsolete 'eventid' attribute in UValue 

	* src/uvalue.cc: do it.

2006-11-01  Jean-Christophe Baillie  <baillie@gostai.com>

	Code reindent and force coding style

	* src/ucommand.cc: do it.
	* src/uvalue.h: do it.
	* src/ucommand.h: do it.
	* src/parser/bison/ugrammar.y: do it.
	* src/uexpression.cc: do it.
	* src/uvalue.cc: do it.
	* src/uvariable.cc: do it.
	* src/userver.cc: do it.
	* src/uobj.cc: do it.
	* src/uvariablename.cc: do it.
	* src/uvariable.h: do it.
	* src/uvariablename.h: do it.
	* src/uconnection.cc: do it.

2006-10-31  Matthieu Nottale  <nottale@gostai.com>

	Rename Connection* to connection* 

	* src/network/bsdnet/Connection.cc: Remove.
	* src/network/bsdnet/connection.cc: New.
	* src/network/bsdnet/Connection.h: Remove.
	* src/network/bsdnet/bsdnet.mk: .
	* src/network/bsdnet/network.cc: .
	* src/network/bsdnet/connection.hh: New.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	Depend on uobject/ not liburbi
	* src/ucommand.cc, src/uexpression.h, src/uexpression.cc,
	* src/uobject.cc, src/uvalue.cc, src/network/bsdnet/Connection.cc,
	* src/uvariable.cc, src/uvar.cc, src/userver.cc, src/uobj.cc,
	* src/uvariablename.cc: Adjust: use uobject/uobject.hh.

	* src/Makefile.am, configure.ac, Makefile.am: Adjust.

2006-10-31  Jean-Christophe Baillie  <baillie@gostai.com>

	Add multievent support (whenever still not working) 
	* src/ucommand.cc: adjust UCommand_EMIT and UCommand_AT.
	* src/ucommand.h: add inheritance from UASyncCommand.
	* src/uatcandidate.cc: New.
	* src/uexpression.h: change UExpression::eval prototype.
	* src/utypes.h: add UEventCompoundType.
	* src/ueventinstance.cc: New.
	* src/ueventinstance.h: New.
	* src/uasynccommand.h: New.
	* src/uasyncregister.cc: New.
	* src/uasyncregister.h: New.